# stm32-can-telemetry

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  arm-none-eabi.cmake
common/include/: clock.h
sensor_node/: STM32F407VG_FLASH.ld  main.c  startup_stm32f407.c
sensor_node/include/: board_f407.h
sensor_node/src/: clock_f407.c
